; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_h261dec.c_h261_probe.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_h261dec.c_h261_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }

@h261_probe.lut = internal constant [16 x i32] [i32 1, i32 2, i32 3, i32 4, i32 5, i32 6, i32 7, i32 8, i32 9, i32 10, i32 11, i32 12, i32 0, i32 16, i32 16, i32 16], align 16
@h261_probe.lut.1 = internal constant [16 x i32] [i32 1, i32 3, i32 16, i32 5, i32 16, i32 0, i32 16, i32 16, i32 16, i32 16, i32 16, i32 16, i32 16, i32 16, i32 16, i32 16], align 16
@AVPROBE_SCORE_EXTENSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @h261_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @h261_probe(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  store i32 0, i32* %4, align 4
  br label %12

12:                                               ; preds = %87, %1
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp slt i32 %13, %16
  br i1 %17, label %18, label %90

18:                                               ; preds = %12
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = call i32 @AV_RB16(i32* %24)
  %26 = sub nsw i32 %25, 1
  %27 = icmp ult i32 %26, 255
  br i1 %27, label %28, label %86

28:                                               ; preds = %18
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 1
  %31 = load i32*, i32** %30, align 8
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 1
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %31, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @av_log2_16bit(i32 %36)
  store i32 %37, i32* %9, align 4
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  %40 = load i32*, i32** %39, align 8
  %41 = load i32, i32* %4, align 4
  %42 = sub nsw i32 %41, 1
  %43 = call i64 @FFMAX(i32 %42, i32 0)
  %44 = getelementptr inbounds i32, i32* %40, i64 %43
  %45 = call i32 @AV_RB64(i32* %44)
  %46 = load i32, i32* %9, align 4
  %47 = add nsw i32 24, %46
  %48 = ashr i32 %45, %47
  store i32 %48, i32* %10, align 4
  %49 = load i32, i32* %10, align 4
  %50 = and i32 %49, -65536
  %51 = icmp eq i32 %50, 65536
  br i1 %51, label %52, label %85

52:                                               ; preds = %28
  %53 = load i32, i32* %10, align 4
  %54 = ashr i32 %53, 12
  %55 = and i32 %54, 15
  store i32 %55, i32* %11, align 4
  %56 = load i32, i32* %11, align 4
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %61, label %58

58:                                               ; preds = %52
  %59 = load i32, i32* %10, align 4
  %60 = and i32 %59, 8
  store i32 %60, i32* %8, align 4
  br label %61

61:                                               ; preds = %58, %52
  %62 = load i32, i32* %11, align 4
  %63 = load i32, i32* %7, align 4
  %64 = icmp ne i32 %62, %63
  br i1 %64, label %65, label %68

65:                                               ; preds = %61
  %66 = load i32, i32* %6, align 4
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %6, align 4
  br label %71

68:                                               ; preds = %61
  %69 = load i32, i32* %5, align 4
  %70 = add nsw i32 %69, 1
  store i32 %70, i32* %5, align 4
  br label %71

71:                                               ; preds = %68, %65
  %72 = load i32, i32* %8, align 4
  %73 = icmp ne i32 %72, 0
  br i1 %73, label %74, label %79

74:                                               ; preds = %71
  %75 = load i32, i32* %11, align 4
  %76 = sext i32 %75 to i64
  %77 = getelementptr inbounds [16 x i32], [16 x i32]* @h261_probe.lut, i64 0, i64 %76
  %78 = load i32, i32* %77, align 4
  store i32 %78, i32* %7, align 4
  br label %84

79:                                               ; preds = %71
  %80 = load i32, i32* %11, align 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds [16 x i32], [16 x i32]* @h261_probe.lut.1, i64 0, i64 %81
  %83 = load i32, i32* %82, align 4
  store i32 %83, i32* %7, align 4
  br label %84

84:                                               ; preds = %79, %74
  br label %85

85:                                               ; preds = %84, %28
  br label %86

86:                                               ; preds = %85, %18
  br label %87

87:                                               ; preds = %86
  %88 = load i32, i32* %4, align 4
  %89 = add nsw i32 %88, 1
  store i32 %89, i32* %4, align 4
  br label %12

90:                                               ; preds = %12
  %91 = load i32, i32* %5, align 4
  %92 = load i32, i32* %6, align 4
  %93 = mul nsw i32 2, %92
  %94 = add nsw i32 %93, 6
  %95 = icmp sgt i32 %91, %94
  br i1 %95, label %96, label %98

96:                                               ; preds = %90
  %97 = load i32, i32* @AVPROBE_SCORE_EXTENSION, align 4
  store i32 %97, i32* %2, align 4
  br label %109

98:                                               ; preds = %90
  %99 = load i32, i32* %5, align 4
  %100 = load i32, i32* %6, align 4
  %101 = mul nsw i32 2, %100
  %102 = add nsw i32 %101, 2
  %103 = icmp sgt i32 %99, %102
  br i1 %103, label %104, label %107

104:                                              ; preds = %98
  %105 = load i32, i32* @AVPROBE_SCORE_EXTENSION, align 4
  %106 = sdiv i32 %105, 2
  store i32 %106, i32* %2, align 4
  br label %109

107:                                              ; preds = %98
  br label %108

108:                                              ; preds = %107
  store i32 0, i32* %2, align 4
  br label %109

109:                                              ; preds = %108, %104, %96
  %110 = load i32, i32* %2, align 4
  ret i32 %110
}

declare dso_local i32 @AV_RB16(i32*) #1

declare dso_local i32 @av_log2_16bit(i32) #1

declare dso_local i32 @AV_RB64(i32*) #1

declare dso_local i64 @FFMAX(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
